# timetrack.txt

./: README.md  SPEC.md  pyproject.toml  timetrack.cfg  timetrack.py  timetrack.txt  timetrack_test.py
.gitea/workflows/: test.yml
data/2024/: 2024-07.txt
vim/: timetrack.vim
