[tool.poetry]
name = "timetrack-txt"
version = "0.1.0"
description = ""
authors = ["Jens Blawatt <jblawatt@googlemail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "timetrack.py"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
pydantic = "^2.8.0"
pytimeparse = "^1.1.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.0"
mypy = "^1.10.1"
isort = "^5.13.2"
ipdb = "^0.13.13"
pudb = "^2024.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
