[project]
name = "timetrack-txt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "pydantic>=2.10.4",
    "pytimeparse>=1.1.8",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "ruff>=0.8.6",
]
